Fixed representation tray being behind images

--- a/src/assets/styles/player.scss
+++ b/src/assets/styles/player.scss
@@ -608,7 +608,6 @@ $romper-hover-text-size: 25px;
   position: absolute;
   top: 0;
   width: 100%;
-  z-index: 2;
 }
 
 .romper-variable-panel {
